[package]
name = "bxt-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
dll-syringe = "0.17.0"
eframe = "0.33.2"
egui = "0.33.2"
env_logger = "0.11.8"
eyre = "0.6.12"
rfd = "0.15.4"
serde = "1.0.228"
toml = "0.9.8"
windows = { version = "0.62.2", features = ["Win32_System_Threading","Win32_Foundation","Win32_Security"] }
