[package]
name = "bxt-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.2"
egui = "0.33.2"
env_logger = "0.11.8"
rfd = "0.15.4"
serde = "1.0.228"
thiserror = "2.0.17"
toml = "0.9.8"

[target."cfg(windows)".dependencies]
windows = { version = "0.62.2", features = ["Win32_System_Threading","Win32_Foundation","Win32_Security"] }
dll-syringe = "0.17.0"

